--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -34,13 +34,18 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@material-ui/core": "^4.12.2",
     "@mui/material": "^5.11.2",
     "@mui/styles": "^5.11.2"
   },
   "peerDependencies": {
+    "@material-ui/core": "^4.12.2",
     "@types/react": "^16.13.1 || ^17.0.0",
     "react": "^16.13.1 || ^17.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@material-ui/core": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@backstage/cli": "workspace:^"
